# ir-replay-rc

./: CMakeLists.txt  README.md  build.sh  build_and_copy.sh  build_and_run.sh  build_and_test.sh
src/: llgame-main.cpp  main-replay-rc.cpp  main-replay-scraper.cpp  main-timing-tower.cpp  strutil.cpp  strutil.h
src/components/: cam-ctrl-comp.h  rendering-comp.cpp  rendering-comp.h  session-comp.h  timing-tower-config-comp.h
src/events/: scraper-events.h
src/systems/: closest-battle-director-sys.cpp  current-driver-overlay-sys.cpp  current-driver-overlay-sys.h  irtelemetry-fake-sys.cpp  irtelemetry-fake-sys.h  irtelemetry-sys.cpp  overtake-detector-system.cpp  replay-director-system.cpp  replay-director-system.h  replay-skip-graphic-sys.cpp  replay-skip-graphic-sys.h  scraper-system.cpp  scraper-system.h  session-leaderboard-sys.cpp  session-leaderboard-sys.h  timing-tower-sys.cpp  timing-tower-sys.h  tui-sys.cpp  tui-sys.h  window-rendering-sys.cpp  window-rendering-sys.h
src/tests/: test-scraper-system.cpp
